--- a/style.css
+++ b/style.css
@@ -1,54 +1,126 @@
 * {
     box-sizing: border-box;
-    flex-shrink: 0;
-    font-family: 'Roboto Slab', serif;
+    font-family: "Roboto Slab", serif;
 }
 
-html, body {
+html,
+body {
     padding: 0;
     margin: 0;
     height: 100%;
     width: 100%;
 }
 
-#intro-container {
-    width: 100%;
-    height: 100%;
+body {
+    display: flex;
+    flex-direction: column;
 }
 
-#intro-container header {
-    height: 150px;
+header {
+    height: 100px;
     background-color: #000000;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 0 200px;
+    padding: 0 100px;
+    flex-shrink: 0;
 }
 
-#intro-container header h1 img {
-    width: 125px;
+header h1 img {
+    width: 75px;
 }
 
-#intro-container header nav {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 1000px;
+header nav {
+    text-align: right;
 }
 
-#intro-container header nav a {
-    font-size: 36px;
+header nav a {
+    font-size: 30px;
     font-weight: bold;
     color: white;
     text-decoration: none;
+    margin-left: 10px;
 }
 
-#intro-container #banner {
-    height: calc(100% - 150px);
+header nav a#menu-icon {
+    display: inline-block;
+    cursor: pointer;
+    display: none;
+    margin: 0;
+}
+
+header nav a#menu-icon div {
+    width: 35px;
+    height: 5px;
+    background-color: #fff;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+
+header nav .change .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+    transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+header nav .change .bar2 {
+    opacity: 0;
+}
+
+header nav .change .bar3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px);
+    transform: rotate(45deg) translate(-8px, -8px);
+}
+
+header div {
     width: 100%;
-    background: linear-gradient(rgba(0, 108, 53, 0.6), rgba(0, 108, 53, 0.6)), url("group.png");
+}
+
+#shrink-header {
+    display: none;
+    position: absolute;
+    top: 100px;
+    width: 100%;
+    max-height: 0; /* 400px*/
+    overflow: hidden;
+    padding: 0;
+    background-color: #000000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    transition: all 1s ease-in-out;
+}
+
+#shrink-header.show {
+    padding: 50px 0;
+    max-height: 400px;
+
+}
+
+#shrink-header a {
+    font-size: 30px;
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+    margin-left: 10px;
+}
+
+@media only screen and (max-width: 1125px) {
+    header nav a {
+        display: none;
+    }
+
+    header nav a#menu-icon {
+        display:initial;
+    }
+}
+
+#banner {
+    flex-grow: 1;
+    padding: 0 100px;
+    background: linear-gradient(rgba(0, 108, 53, 0.6), rgba(0, 108, 53, 0.6)),
+        url("group.png");
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
@@ -56,29 +128,59 @@ html, body {
     justify-content: center;
 }
 
-#intro-container #banner > div {
+#banner > div {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: -150px;
+    margin-top: -100px;
     width: 100%;
-    padding: 0 200px;
 }
 
-#intro-container #banner div h2 {
-    font-size: 96px;
+#banner div h2 {
+    font-size: 70px;
     font-weight: bold;
     color: white;
     margin-bottom: 20px;
 }
 
-#intro-container #banner div h3 {
-    font-size: 36px;
+#banner div h3 {
+    font-size: 20px;
     font-weight: bold;
     color: white;
     margin: 0;
 }
 
-#intro-container #banner div img {
-    width: 500px;
+#banner div img {
+    width: 300px;
+}
+
+@media only screen and (max-width: 1200px) {
+    #banner > div {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    #banner > div > div {
+        margin: 20px 0;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    #banner div h2 {
+        font-size: 50px;
+    }
+
+    #banner div img {
+        width: 200px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    #banner div h2 {
+        font-size: 30px;
+    }
+
+    #banner div img {
+        width: 150px;
+    }
 }
