--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 * {
     box-sizing: border-box;
     font-family: "Roboto Slab", serif;
+    padding: 0;
+    margin: 0;
 }
 
 html,
 body {
-    padding: 0;
-    margin: 0;
     height: 100%;
     width: 100%;
 }
@@ -152,6 +152,63 @@ header div {
 
 #banner div img {
     width: 300px;
+}
+
+main {
+    padding: 30px 100px;
+}
+
+main h2 {
+    font-size: 46px;
+    font-weight: bold;
+}
+
+.card-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.card {
+    display: flex;
+    flex-direction: row;
+    height: 400px;
+    justify-content: left;
+    border-radius: 10px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    width: 100%;
+    margin: 50px 0;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+}
+
+.card:hover {
+    transform: scale(1.01);
+    box-shadow: 0 6px 20px rgb(0 0 0 / 0.2);
+}
+
+.card .img {
+    height: 100%;
+    min-width: 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.card .text {
+    padding: 20px 50px;
+    overflow: hidden;
+}
+
+.card .text h3 {
+    font-size: 30px;
+}
+
+.card .text h6 {
+    margin: 5px 0 30px 0;
 }
 
 @media only screen and (max-width: 1200px) {
