--- a/style.css
+++ b/style.css
@@ -167,6 +167,11 @@ main h2 {
     font-weight: bold;
 }
 
+main p {
+    font-size: 24px;
+    margin-top: 20px;
+}
+
 .card-container {
     display: flex;
     flex-direction: column;
