Added all other pages

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,2 +1,11 @@
+        <footer><small>&copy; Copyright <%= new Date().getFullYear() %>, Saudi Student Association @ GT</small></footer>
+        <script type="text/javascript">
+            function rotateIcon(x) {
+                x.classList.toggle("change");
+                document
+                    .getElementById("shrink-header")
+                    .classList.toggle("show");
+            }
+        </script>
     </body>
 </html>
