--- a/public/style.css
+++ b/public/style.css
@@ -5,15 +5,8 @@
     margin: 0;
 }
 
-html,
 body {
-    height: 100%;
-    width: 100%;
-}
-
-body {
-    display: flex;
-    flex-direction: column;
+    position: relative;
 }
 
 .stop-scroll {
@@ -300,4 +293,13 @@ main p {
     border-radius: 5px;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background: transparent;
+
 }
