--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,11 @@
         height: 100%;
         width: 100%;
     }
+
+    body {
+        display: flex;
+        flex-direction: column;
+    }
 </style>
 <div id="banner">
     <div>
@@ -18,11 +23,5 @@
         </div>
     </div>
 </div>
-<script type="text/javascript">
-    function rotateIcon(x) {
-        x.classList.toggle("change");
-        document.getElementById("shrink-header").classList.toggle("show");
-    }
-</script>
 
 <%- include ("partials/footer") %>
