--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,11 +17,10 @@
         <header>
             <h1><img src="SSA.png" alt="logo" /></h1>
             <nav>
-                <a href="#">HOME</a>
-                <a href="#">ABOUT</a>
+                <a href="/">HOME</a>
+                <a href="/about">ABOUT</a>
                 <a href="#">MEMBERSHIP</a>
-                <a href="events.html">EVENTS</a>
-                <a href="#">CALENDAR</a>
+                <a href="/events">EVENTS</a>
                 <a id="menu-icon" onclick="rotateIcon(this)">
                     <div class="bar1"></div>
                     <div class="bar2"></div>
@@ -30,9 +29,8 @@
             </nav>
         </header>
         <div id="shrink-header">
-            <a href="#">HOME</a>
-            <a href="#">ABOUT</a>
+            <a href="/">HOME</a>
+            <a href="/about">ABOUT</a>
             <a href="#">MEMBERSHIP</a>
-            <a href="events.html">EVENTS</a>
-            <a href="#">CALENDAR</a>
+            <a href="/events">EVENTS</a>
         </div>
