--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,7 @@
             <nav>
                 <a href="/">HOME</a>
                 <a href="/about">ABOUT</a>
-                <a href="#">MEMBERSHIP</a>
+                <a href="/membership">MEMBERSHIP</a>
                 <a href="/events">EVENTS</a>
                 <a id="menu-icon" onclick="rotateIcon(this)">
                     <div class="bar1"></div>
@@ -31,6 +31,6 @@
         <div id="shrink-header">
             <a href="/">HOME</a>
             <a href="/about">ABOUT</a>
-            <a href="#">MEMBERSHIP</a>
+            <a href="/membership">MEMBERSHIP</a>
             <a href="/events">EVENTS</a>
         </div>
