--- a/public/style.css
+++ b/public/style.css
@@ -113,6 +113,32 @@ header div {
     }
 }
 
+.alert {
+    padding: 20px;
+    background-color: #f44336; /* Red */
+    color: white;
+    margin-bottom: 15px;
+    transform: translateY(-62px);
+    position: absolute;
+    top: 0;
+    transition: all 0.3s ease-in-out;
+}
+
+.closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.closebtn:hover {
+    color: black;
+}
+
 #banner {
     flex-grow: 1;
     padding: 0 100px;
@@ -166,6 +192,10 @@ main p {
 }
 
 main form {
+    text-align: center;
+}
+
+main form section {
     padding: 30px 0;
     display: grid;
     grid-gap: 3rem;
@@ -185,6 +215,19 @@ main form input {
     height: 30px;
     border: 1px solid black;
     padding: 20px 10px;
+}
+
+main form input[type="submit"] {
+    color: #fff;
+    background-color: #000000;
+    border: none;
+    width: auto;
+    height: auto;
+    padding: 10px 20px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    margin: 20px 0;
 }
 
 .card-container {
@@ -290,7 +333,7 @@ main form input {
 .card .overlay div {
     width: 90%;
     height: 80%;
-    background: #FFFFFF;
+    background: #ffffff;
     border-radius: 5px;
     padding: 30px;
 }
@@ -323,5 +366,4 @@ footer {
     left: 50%;
     transform: translateX(-50%);
     background: transparent;
-
 }
