--- a/views/membership.ejs
+++ b/views/membership.ejs
@@ -13,6 +13,10 @@
                 <input type="text" name="email" id="email" value="<% if (typeof query.email === 'string') %><%= query.email %>">
             </div>
             <div>
+                <label for="phone">Phone number</label>
+                <input type="tel" name="phone" id="phone" value="<% if (typeof query.phone === 'string') %><%= query.phone %>">
+            </div>
+            <div>
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password">
             </div>
