--- a/public/style.css
+++ b/public/style.css
@@ -360,6 +360,28 @@ main form input[type="submit"] {
     background-size: cover;
 }
 
+main > section {
+    width: 100%;
+    padding: 30px 20px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    border-radius: 10px;
+}
+
+main > section table {
+    width: 100%;
+    margin-top: 30px;
+    text-align: center;
+}
+
+main > section table td {
+    padding: 10px 0;
+}
+
+main > section td form {
+    display: inline-block;
+    margin: 0 20px;
+}
+
 footer {
     position: absolute;
     bottom: 0;
