--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,6 +21,10 @@
                 <a href="/about">ABOUT</a>
                 <a href="/members">MEMBERSHIP</a>
                 <a href="/events">EVENTS</a>
+                <% if (typeof user === 'object' && user.isAdmin === true) { %>
+                    <a href="/manage">MANAGE</a>
+                <% } %>
+                <a href="/login">LOGIN</a>
                 <a id="menu-icon" onclick="rotateIcon(this)">
                     <div class="bar1"></div>
                     <div class="bar2"></div>
@@ -33,6 +37,10 @@
             <a href="/about">ABOUT</a>
             <a href="/members">MEMBERSHIP</a>
             <a href="/events">EVENTS</a>
+            <% if (typeof user === 'object' && user.isAdmin === true) { %>
+                <a href="/manage">MANAGE</a>
+            <% } %>
+            <a href="/login">LOGIN</a>
         </div>
         <div class="alert">
             <span class="closebtn" onclick="this.parentElement.style.transform='translateY(-62px)';">&times;</span>
