--- a/public/style.css
+++ b/public/style.css
@@ -367,6 +367,7 @@ main > section {
     padding: 30px 20px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     border-radius: 10px;
+    margin: 50px 0;
 }
 
 main > section table {
