--- a/views/events.ejs
+++ b/views/events.ejs
@@ -69,6 +69,9 @@
                     <div class="overlay">
                         <div>
                             <h3>Event Photos</h3>
+                            <form action="/events/<%= event._id %>/attend" method="POST" enctype="application/x-www-form-urlencoded">
+                                <input type="submit">
+                            </form>
                             <section>
                                 <% event.photos.forEach(function(photo) { %>
                                     <div style="background-image: url('/uploads/<%= photo %>');"></div>
