--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,11 @@
                 <% if (typeof user === 'object' && user.isAdmin === true) { %>
                     <a href="/manage">MANAGE</a>
                 <% } %>
-                <a href="/login">LOGIN</a>
+                <% if (!(typeof user === 'object')) { %>
+                    <a href="/login">LOGIN</a>
+                <% } else { %>
+                    <a href="/logout">LOGOUT</a>
+                <% } %>
                 <a id="menu-icon" onclick="rotateIcon(this)">
                     <div class="bar1"></div>
                     <div class="bar2"></div>
@@ -40,7 +44,11 @@
             <% if (typeof user === 'object' && user.isAdmin === true) { %>
                 <a href="/manage">MANAGE</a>
             <% } %>
-            <a href="/login">LOGIN</a>
+            <% if (!(typeof user === 'object')) { %>
+                <a href="/login">LOGIN</a>
+            <% } else { %>
+                <a href="/logout">LOGOUT</a>
+            <% } %>
         </div>
         <div class="alert">
             <span class="closebtn" onclick="this.parentElement.style.transform='translateY(-62px)';">&times;</span>
