--- a/views/events.ejs
+++ b/views/events.ejs
@@ -69,14 +69,18 @@
                     <div class="overlay">
                         <div>
                             <h3>Event Photos</h3>
-                            <% if (event.attendees.some(e => e._id.toString() === user._id.toString())) { %>
-                                <form action="/events/<%= event._id %>/dersvp" method="POST" enctype="application/x-www-form-urlencoded">
-                                    <input type="submit" value="DERSVP">
-                                </form>
+                            <% if (typeof user === 'object') { %>
+                                <% if (event.attendees.some(e => e._id.toString() === user._id.toString())) { %>
+                                    <form action="/events/<%= event._id %>/dersvp" method="POST" enctype="application/x-www-form-urlencoded">
+                                        <input type="submit" value="DERSVP">
+                                    </form>
+                                <% } else { %>
+                                    <form action="/events/<%= event._id %>/rsvp" method="POST" enctype="application/x-www-form-urlencoded">
+                                        <input type="submit" value="RSVP">
+                                    </form>
+                                <% } %>
                             <% } else { %>
-                                <form action="/events/<%= event._id %>/rsvp" method="POST" enctype="application/x-www-form-urlencoded">
-                                    <input type="submit" value="RSVP">
-                                </form>
+                                <a href="/login">LOGIN to RSVP</a>
                             <% } %>
                             <h4>Attendees</h3>
                             <div class="rsvp">
