--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -11,8 +11,8 @@
                 <th>Phone</th>
                 <th>Actions</th>
             </tr>
-            <% members.forEach(function(member) { %>
-            <% if (member.isActivated === false) { %>
+            <% members.forEach(function(member) { %> <% if (member.isActivated
+            === false) { %>
             <tr>
                 <td><%= member.name %></td>
                 <td><%= member.email %></td>
@@ -38,8 +38,7 @@
                     </form>
                 </td>
             </tr>
-            <% } %>
-            <% }) %>
+            <% } %> <% }) %>
         </table>
     </section>
     <section>
@@ -51,8 +50,8 @@
                 <th>Phone</th>
                 <th>Actions</th>
             </tr>
-            <% members.forEach(function(member) { %> 
-            <% if (member.isActivated === true) { %>
+            <% members.forEach(function(member) { %> <% if (member.isActivated
+            === true) { %>
             <tr>
                 <td><%= member.name %></td>
                 <td><%= member.email %></td>
@@ -71,7 +70,7 @@
                         /><input type="submit" value="Make Admin" />
                     </form>
                     <% } else { %>
-                        <form
+                    <form
                         action="/members/<%= member._id %>?_method=PUT"
                         method="POST"
                         enctype="application/x-www-form-urlencoded"
@@ -93,8 +92,7 @@
                     </form>
                 </td>
             </tr>
-            <% } %>
-            <% }) %>
+            <% } %> <% }) %>
         </table>
     </section>
     <% } %>
@@ -140,27 +138,15 @@
                 </div>
                 <div>
                     <label for="mainPhoto">Main Photo</label>
-                    <input
-                        type="file"
-                        name="mainPhoto"
-                        id="mainPhoto"
-                    />
+                    <input type="file" name="mainPhoto" id="mainPhoto" />
                 </div>
                 <div>
                     <label for="photo">Photo</label>
-                    <input
-                        type="file"
-                        name="photo"
-                        id="photo"
-                    />
+                    <input type="file" name="photo" id="photo" />
                 </div>
                 <div>
                     <label for="photo">Photo</label>
-                    <input
-                        type="file"
-                        name="photo"
-                        id="photo"
-                    />
+                    <input type="file" name="photo" id="photo" />
                 </div>
             </section>
             <input type="submit" />
@@ -183,6 +169,13 @@
                 <td><%= event.date %></td>
                 <td><%= event.location %></td>
                 <td>
+                    <form
+                        action="/events/<%= event._id %>/edit"
+                        method="GET"
+                        enctype="application/x-www-form-urlencoded"
+                    >
+                        <input type="submit" value="Edit" />
+                    </form>
                     <form
                         action="/events/<%= event._id %>?_method=DELETE"
                         method="POST"
@@ -209,16 +202,20 @@
         photoEl.id = "photo";
 
         labelEl.setAttribute("for", "photo");
-        labelEl.innerHTML = "Photo"
+        labelEl.innerHTML = "Photo";
 
         divEl.appendChild(labelEl);
         divEl.appendChild(photoEl);
 
-        document.querySelector("form[action='/events'] > section").appendChild(divEl)
+        document
+            .querySelector("form[action='/events'] > section")
+            .appendChild(divEl);
     }
 
     function removePhoto() {
-        query = document.querySelectorAll("form[action='/events'] input[name='photo']");
+        query = document.querySelectorAll(
+            "form[action='/events'] input[name='photo']"
+        );
         query[query.length - 1].parentNode.remove();
     }
 </script>
