--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -24,7 +24,7 @@
     </head>
     <body>
         <header>
-            <h1><img src="SSA.png" alt="logo" /></h1>
+            <h1><img src="/SSA.png" alt="logo" /></h1>
             <nav>
                 <a href="/">HOME</a>
                 <a href="/about">ABOUT</a>
@@ -61,7 +61,6 @@
         </div>
         <div class="alert">
             <span class="closebtn" onclick="this.parentElement.style.transform='translateY(-62px)';">&times;</span>
-            HEHEHE
         </div>
         <script>
             function flash(msg) {
