lamoo's feature for exporting users

--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -188,6 +188,15 @@
             <% }) %>
         </table>
     </section>
+    <section>
+        <h2>Events</h2>
+        <form
+            action="/members/export"
+            method="GET"
+        >
+            <input type="submit" value="Export Members Excel" />
+        </form>
+    </section>
     <% } %>
 </main>
 
