adding team page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,6 +28,7 @@
             <nav>
                 <a href="/">HOME</a>
                 <a href="/about">ABOUT</a>
+                <a href="/team">TEAM</a>
                 <a href="/members">MEMBERSHIP</a>
                 <a href="/events">EVENTS</a>
                 <% if (typeof user === 'object' && user.isAdmin === true) { %>
@@ -48,6 +49,7 @@
         <div id="shrink-header">
             <a href="/">HOME</a>
             <a href="/about">ABOUT</a>
+            <a href="/team">TEAM</a>
             <a href="/members">MEMBERSHIP</a>
             <a href="/events">EVENTS</a>
             <% if (typeof user === 'object' && user.isAdmin === true) { %>
