--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -2,6 +2,23 @@
 
 <main>
     <h2>Contact</h2>
+    <form action="/contact" method="POST" enctype="application/x-www-form-urlencoded">
+        <section>
+            <div>
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" value="<% if (typeof query.name === 'string') %><%= query.name %>">
+            </div>
+            <div>
+                <label for="email">Email</label>
+                <input type="text" name="email" id="email" value="<% if (typeof query.email === 'string') %><%= query.email %>">
+            </div>
+            <div style="grid-column: span 2;">
+                <label for="msg">Message</label>
+                <textarea name="msg" id="msg"><% if (typeof query.msg === 'string') %><%= query.msg %></textarea>
+            </div>
+        </section>
+        <input type="submit">
+    </form>
 </main>
 
 <%- include ("partials/footer") %>
