--- a/public/style.css
+++ b/public/style.css
@@ -214,9 +214,18 @@ main .grid-section {
     grid-template-columns: 1fr 1fr 1fr;
 }
 
+main form textarea {
+    height: 200px;
+    width: 80%;
+}
+
 @media only screen and (max-width: 850px) {
     main form section {
         grid-template-columns: 1fr;
+    }
+
+    main form section div {
+        grid-column: span 2;
     }
 
     main {
