--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,6 +34,7 @@
                 <% if (typeof user === 'object' && user.isAdmin === true) { %>
                     <a href="/manage">MANAGE</a>
                 <% } %>
+                <a href="/contact">CONTACT</a>
                 <% if (!(typeof user === 'object')) { %>
                     <a href="/login">LOGIN</a>
                 <% } else { %>
@@ -55,6 +56,7 @@
             <% if (typeof user === 'object' && user.isAdmin === true) { %>
                 <a href="/manage">MANAGE</a>
             <% } %>
+            <a href="/contact">CONTACT</a>
             <% if (!(typeof user === 'object')) { %>
                 <a href="/login">LOGIN</a>
             <% } else { %>
