added contact to db

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -13,8 +13,8 @@
                 <input type="text" name="email" id="email" value="<% if (typeof query.email === 'string') %><%= query.email %>">
             </div>
             <div style="grid-column: span 2;">
-                <label for="msg">Message</label>
-                <textarea name="msg" id="msg"><% if (typeof query.msg === 'string') %><%= query.msg %></textarea>
+                <label for="message">Message</label>
+                <textarea name="message" id="message"><% if (typeof query.message === 'string') %><%= query.message %></textarea>
             </div>
         </section>
         <input type="submit">
